--- a/MailboxMenu/manifest.json
+++ b/MailboxMenu/manifest.json
@@ -1,9 +1,9 @@
 ﻿{
   "Name": "Mailbox Menu",
   "Author": "aedenthorn",
-  "Version": "0.3.7",
+  "Version": "0.3.8",
   "Description": "Mailbox Menu.",
-  "UniqueID": "aedenthorn.MailboxMenu",
+  "UniqueID": "kqrse.MailboxMenu",
   "EntryDll": "MailboxMenu.dll",
   "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [ "Nexus:21068" ]
