update manifest to use nexusmods account name

--- a/MailboxMenu/manifest.json
+++ b/MailboxMenu/manifest.json
@@ -3,7 +3,7 @@
   "Author": "aedenthorn",
   "Version": "0.3.8-beta",
   "Description": "Mailbox Menu.",
-  "UniqueID": "kqrse.MailboxMenu",
+  "UniqueID": "tem696969696969.MailboxMenu",
   "EntryDll": "MailboxMenu.dll",
   "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [ "Nexus:21068" ]
