--- a/CropWateringBubbles/manifest.json
+++ b/CropWateringBubbles/manifest.json
@@ -1,9 +1,9 @@
 ﻿{
-  "Name": "Crop Watering Bubbles",
-  "Author": "aedenthorn",
+  "Name": "Crop Watering Bubbles Continued",
+  "Author": "aedenthorn, tem696969696969",
   "Version": "0.2.7",
   "Description": "Crop Harvest Bubbles.",
-  "UniqueID": "aedenthorn.CropWateringBubbles",
+  "UniqueID": "tem696969696969.CropWateringBubbles",
   "EntryDll": "CropWateringBubbles.dll",
   "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [ "Nexus:21428" ]
