--- a/LikeADuckToWater/manifest.json
+++ b/LikeADuckToWater/manifest.json
@@ -1,22 +1,10 @@
 ﻿{
-  "Name": "Like A Duck To Water",
-  "Author": "aedenthorn",
+  "Name": "Like A Duck To Water Continued",
+  "Author": "aedenthorn, tem696969696969",
   "Version": "0.4.5",
   "Description": "Like A Duck To Water.",
-  "UniqueID": "aedenthorn.LikeADuckToWater",
+  "UniqueID": "tem696969696969.LikeADuckToWater",
   "EntryDll": "LikeADuckToWater.dll",
   "MinimumApiVersion": "4.0.0",
-  "ModUpdater": {
-    "Repository": "StardewValleyMods",
-    "User": "aedenthorn",
-    "Directory": "_releases",
-    "ModFolder": "LikeADuckToWater"
-  },
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.ModUpdater",
-      "IsRequired": false
-    }
-  ],
   "UpdateKeys": [ "Nexus:21285" ]
 }
