--- a/MailboxMenu/manifest.json
+++ b/MailboxMenu/manifest.json
@@ -1,9 +1,9 @@
 ﻿{
-  "Name": "Mailbox Menu",
-  "Author": "aedenthorn",
+  "Name": "Mailbox Menu Continued",
+  "Author": "aedenthorn, tem696969696969",
   "Version": "0.3.8",
   "Description": "Mailbox Menu.",
-  "UniqueID": "kqrse.MailboxMenu",
+  "UniqueID": "tem696969696969.MailboxMenu",
   "EntryDll": "MailboxMenu.dll",
   "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [ "Nexus:21068" ]
