--- a/CropWateringBubbles/manifest.json
+++ b/CropWateringBubbles/manifest.json
@@ -2,7 +2,7 @@
   "Name": "Crop Watering Bubbles Continued",
   "Author": "aedenthorn, tem696969696969",
   "Version": "0.2.7",
-  "Description": "Crop Harvest Bubbles.",
+  "Description": "Visual indicators to show your crops are thirsty.",
   "UniqueID": "tem696969696969.CropWateringBubbles",
   "EntryDll": "CropWateringBubbles.dll",
   "MinimumApiVersion": "4.0.0",
