--- a/LikeADuckToWater/manifest.json
+++ b/LikeADuckToWater/manifest.json
@@ -2,7 +2,7 @@
   "Name": "Like A Duck To Water Continued",
   "Author": "aedenthorn, tem696969696969",
   "Version": "0.4.5",
-  "Description": "Like A Duck To Water.",
+  "Description": "Ducks love going for a daily swim.",
   "UniqueID": "tem696969696969.LikeADuckToWater",
   "EntryDll": "LikeADuckToWater.dll",
   "MinimumApiVersion": "4.0.0",
