--- a/MailboxMenu/manifest.json
+++ b/MailboxMenu/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
-  "Name": "Mailbox Menu",
-  "Author": "aedenthorn",
+  "Name": "Mailbox Menu Continued",
+  "Author": "aedenthorn, tem696969696969",
   "Version": "0.3.8-beta",
-  "Description": "Mailbox Menu.",
+  "Description": "A menu to view new and old mail.",
   "UniqueID": "tem696969696969.MailboxMenu",
   "EntryDll": "MailboxMenu.dll",
   "MinimumApiVersion": "4.0.0",
