--- a/MailboxMenu/manifest.json
+++ b/MailboxMenu/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Mailbox Menu Continued",
   "Author": "aedenthorn, tem696969696969",
-  "Version": "0.3.8-beta",
+  "Version": "0.3.8-beta2",
   "Description": "A menu to view new and old mail.",
   "UniqueID": "tem696969696969.MailboxMenu",
   "EntryDll": "MailboxMenu.dll",
